--- a/style.css
+++ b/style.css
@@ -8,17 +8,13 @@
 .container-header{
     width: 100%;
     background-color: rgba(255,105,0,255);
-    position: fixed;
     color: rgba(255,232,216,255);
     font-family: 'Montserrat', sans-serif;
     font-size: 14px;
 }
     
-.full-container{
-    width: 80%;
-    margin: 0 auto;
-   
-}  
+    
+
     
 .row{
     display: flex;
@@ -43,9 +39,6 @@ h3{
     margin-bottom: 10px;
     margin-left: 50px;
 }
-    
-    
-   
 
 .col-3{
     
@@ -66,5 +59,44 @@ h3{
     margin-left: 10px;
 
 }
-
     
+   
+
+
+/*fine header*/
+
+/*inizio main*/
+
+.full-container{
+    width: 80%;
+    margin: 0 auto;
+}
+
+.container-main{
+    margin-top: 50px;
+    width: 100%;
+}
+   
+
+.row-main{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}  
+    
+   
+   
+   
+
+
+.col-33{
+    width:calc(100%/3);
+    background-color: red;
+    margin: 10px 30px;
+    height: 300px;
+    
+}
+   
+
+
+   
